# odpmkd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: simple.odp
odpmkd/: __init__.py  odpmkd.py  odptools.py
tests/: tests_basic.py
